// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`int-errors char-int 1`] = `

Invalid \`prisma.user.update()\` invocation in
/client/src/__tests__/integration/errors/int-errors/test.ts:52:25

{
  where: {
    id: '576eddf9-2434-421f-9a86-58bede16fd95'
  },
  data: {
    age: 'thisisastringwith30characters'
         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  }
}

Argument age: Got invalid value 'thisisastringwith30characters' on prisma.updateOneUser. Provided String, expected Int or NullableIntFieldUpdateOperationsInput.
type NullableIntFieldUpdateOperationsInput {
  set?: Int
}


`;

exports[`int-errors overflow-int 1`] = `

Invalid \`prisma.user.update()\` invocation in
/client/src/__tests__/integration/errors/int-errors/test.ts:66:25


  Value out of range for the type. Out of range value for column 'age' at row 1
`;

exports[`int-errors signed-int 1`] = `

Invalid \`prisma.user.update()\` invocation in
/client/src/__tests__/integration/errors/int-errors/test.ts:80:25


  Value out of range for the type. Out of range value for column 'age' at row 1
`;
